Vista de recuperacion

--- a/Proyecto_WEB/Proyecto_WEB/Proyecto_WEB.csproj
+++ b/Proyecto_WEB/Proyecto_WEB/Proyecto_WEB.csproj
@@ -10,4 +10,15 @@
     <PackageReference Include="Dapper" Version="2.1.35" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Views\Home\Recovery.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
