Login API/Web , CreateCliente Api

--- a/Proyecto_API/Proyecto_API/appsettings.json
+++ b/Proyecto_API/Proyecto_API/appsettings.json
@@ -1,5 +1,7 @@
 {
-
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost\\SQLEXPRESS;;Database=Gym;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
