--- a/Proyecto_WEB/Proyecto_WEB/appsettings.json
+++ b/Proyecto_WEB/Proyecto_WEB/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "Variables": {
+    "UrlApi": "https://localhost:7179/api/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
