--- a/Proyecto_WEB/Proyecto_WEB/Proyecto_WEB.csproj
+++ b/Proyecto_WEB/Proyecto_WEB/Proyecto_WEB.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Update="Views\Home\Recovery.cshtml">
+    <Content Update="Views\Login\Recovery.cshtml">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
