--- a/Proyecto_WEB/Proyecto_WEB/appsettings.json
+++ b/Proyecto_WEB/Proyecto_WEB/appsettings.json
@@ -1,6 +1,7 @@
 {
   "Variables": {
-    "UrlApi": "https://localhost:7179/api/"
+    "UrlApi": "https://localhost:7179/api/",
+    "Llave": "63b3NQMsrK8YSVjQcyYGcJJ9eZJRa6cz"
   },
   "Logging": {
     "LogLevel": {
