--- a/Proyecto_API/Proyecto_API/appsettings.json
+++ b/Proyecto_API/Proyecto_API/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost\\SQLEXPRESS;;Database=Gym;Trusted_Connection=True;TrustServerCertificate=True;"
   },
+  "Variables": {
+    "Llave": "63b3NQMsrK8YSVjQcyYGcJJ9eZJRa6cz",
+    "CorreoEmail": "adiaz90417@ufide.ac.cr",
+    "ClaveEmail": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
