--- a/Proyecto_API/Proyecto_API/appsettings.json
+++ b/Proyecto_API/Proyecto_API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost\\SQLEXPRESS;;Database=Gym;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "server=localhost\\SQLEXPRESS01;;Database=Gym;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Variables": {
     "Llave": "63b3NQMsrK8YSVjQcyYGcJJ9eZJRa6cz",
