--- a/Proyecto_API/Proyecto_API/appsettings.json
+++ b/Proyecto_API/Proyecto_API/appsettings.json
@@ -5,7 +5,7 @@
   "Variables": {
     "Llave": "63b3NQMsrK8YSVjQcyYGcJJ9eZJRa6cz",
     "CorreoEmail": "adiaz90417@ufide.ac.cr",
-    "ClaveEmail": ""
+    "ClaveEmail": "Sabadazo2433"
   },
   "Logging": {
     "LogLevel": {
